# citestage

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  apm.lock.yaml  apm.yml
.apm/instructions/: project.instructions.md
crates/citestage-cli/: Cargo.toml
crates/citestage-cli/src/: main.rs
crates/citestage-core/: Cargo.toml
crates/citestage-core/src/: lib.rs
crates/citestage-corpus/: Cargo.toml
crates/citestage-corpus/src/: lib.rs
crates/citestage-diagnose/: Cargo.toml
crates/citestage-diagnose/src/: lib.rs
crates/citestage-generate/: Cargo.toml
crates/citestage-generate/src/: lib.rs
crates/citestage-index/: Cargo.toml
crates/citestage-index/src/: lib.rs
crates/citestage-parse/: Cargo.toml
crates/citestage-parse/src/: lib.rs
crates/citestage-report/: Cargo.toml
crates/citestage-report/src/: lib.rs
crates/citestage-rerank/: Cargo.toml
crates/citestage-rerank/src/: lib.rs
crates/citestage-retrieve/: Cargo.toml
crates/citestage-retrieve/src/: lib.rs
docs/: architecture.md  citation-failure-taxonomy.md  ethics.md  evaluation.md  implementation-report.md  local-simulator.md
examples/corpora/oss-nix-repaired/: corpus.yaml
examples/corpora/oss-nix-repaired/distractor-ci/: README.md
examples/corpora/oss-nix/competitor-home-manager/: README.md
examples/reports/: sample-diagnosis.md
examples/traces/: repaired-trace.json  sample-trace.json
python/evals/: README.md
python/experiments/: README.md
schemas/: corpus.schema.json  failure.schema.json  stage-trace.schema.json
(+2 files in other folders)
