[workspace]
members = [
  "crates/citestage-core",
  "crates/citestage-corpus",
  "crates/citestage-parse",
  "crates/citestage-index",
  "crates/citestage-retrieve",
  "crates/citestage-rerank",
  "crates/citestage-generate",
  "crates/citestage-diagnose",
  "crates/citestage-report",
  "crates/citestage-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Divit Mittal"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
pulldown-cmark = "0.10"
